--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
     max-width: 400px;
     margin: 20px auto;
     border: 2px solid #007BFF; /* Belirgin mavi çerçeve */
+    position: relative;
 }
 
 .person-avatar {
@@ -57,4 +58,14 @@ li {
 
 .list-value {
     color: #777; /* Değer rengi */
+}
+
+.person-remove-x {
+    position: absolute; /* Mutlaka bir konum belirtilmeli */
+    top: 10px; /* Yukarıdan 10px uzaklık */
+    right: 10px; /* Sağdan 10px uzaklık */
+    color: #007BFF; /* Mavi renk */
+    cursor: pointer; /* Üzerine gelince el işareti */
+    font-size: 20px; /* X simgesi font boyutu */
+    transition: color 0.3s; /* Renk değişim süresi */
 }
